--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-ingestion-platform",
+  "name": "github-google-drive-integration",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "@hookform/resolvers": "^3.1.0",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
     "jszip": "^3.10.1",
-    "next": "14.2.15",
-    "next-auth": "^4.24.8",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "lucide-react": "^0.221.0",
+    "next": "13.4.4",
+    "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   }
 }
