--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@pinecone-database/pinecone": "^3.0.3",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.0",
