--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "jszip": "^3.10.1",
+    "langchain": "^0.3.2",
     "lucide-react": "^0.221.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
